@@ -28,7 +28,7 @@ class System(item.Item):
         self.kernel_options = ""
         self.ks_meta = ""
         self.pxe_arch = "standard"
-        self.pxe_hostname = ""
+        self.pxe_address = ""
 
     def from_datastruct(self,seed_data):
         self.name = seed_data['name']
@@ -36,7 +36,7 @@ class System(item.Item):
         self.kernel_options = seed_data['kernel_options']
         self.ks_meta = seed_data['ks_meta']
         self.pxe_arch = seed_data['pxe_arch']
-        self.pxe_hostname = seed_data['pxe_hostname']
+        self.pxe_address = seed_data['pxe_address']
         return self
 
     def set_name(self,name):
@@ -54,10 +54,9 @@ class System(item.Item):
         self.name = name  # we check it add time, but store the original value.
         return True
 
-    def set_pxe_hostname(self,hostname):
-        # we allow this to be set to anything
-        # though we probably should check to see if it looks like a FQDN
-        self.pxe_hostname = hostname
+    def set_pxe_address(self,hostname):
+        # we allow this to be set to anything and should restrict it
+        self.pxe_address = hostname
         return True
 
     def set_profile(self,profile_name):
@@ -103,7 +102,7 @@ class System(item.Item):
            'kernel_options' : self.kernel_options,
            'ks_meta'  : self.ks_meta,
            'pxe_arch' : self.pxe_arch,
-           'pxe_hostname' : self.pxe_hostname
+           'pxe_address' : self.pxe_address
         }
 
     def printable(self,id):
@@ -112,6 +111,6 @@ class System(item.Item):
         buf = buf + "kernel options  : %s\n" % self.kernel_options
         buf = buf + "ks metadata     : %s\n" % self.ks_meta
         buf = buf + "pxe arch        : %s\n" % self.pxe_arch
-        buf = buf + "pxe hostname    : %s\n" % self.pxe_hostname
+        buf = buf + "pxe address     : %s\n" % self.pxe_address
         return buf
 
